# ocmesh

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  TODO.md
cpputils/include/std14/: array
include/: csg.h  glm.h  morton.h  octree.h  voxel.h
ocmesh.xcodeproj/: project.pbxproj
ocmesh.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ocmesh.xcodeproj/xcuserdata/gigabytes.xcuserdatad/xcschemes/: ocmesh.xcscheme  xcschememanagement.plist
slides/: biblio.bib  slides.tex
src/: csg.cpp  csg_parser.cpp  obj.cpp  octree.cpp
src/test/: main.cpp
test/: main.cpp  test.csg
